EpisodeActivity hinzugefügt Bewertungstendenz zu Videos hinzugefügt

--- a/app/src/main/res/layout/custom_rating.xml
+++ b/app/src/main/res/layout/custom_rating.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical">
 
     <FrameLayout
         android:id="@+id/customRating_layout"
@@ -29,4 +30,12 @@
             android:max="20"
             android:progress="0" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/customRating_ratingTendencyLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
+
 </LinearLayout>
