--- a/app/src/main/res/layout/dialog_advanced_search_video.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_video.xml
@@ -13,96 +13,7 @@
     <!--        android:layout_height="match_parent"-->
     <!--        android:layout_weight="1" />-->
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-        <LinearLayout
-            android:id="@+id/dialog_advancedSearch_video_negationLayout_rating"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextButtonStyle.Primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Bewertung"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Negiert"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                android:visibility="gone"
-                tools:visibility="visible" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/dialog_advancedSearch_video_range"
-                style="@style/TextButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                tools:text="1.25 ☆ – 4.5 ☆" />
-        </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp">
-
-            <SeekBar
-                android:id="@+id/dialog_advancedSearch_video_singleBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="7dp"
-                android:max="20"
-                android:progress="19"
-                android:progressTint="@color/colorTransparent" />
-
-            <com.innovattic.rangeseekbar.RangeSeekBar
-                android:id="@+id/dialog_advancedSearch_video_rangeBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                app:rsb_initialMaxThumbValue="20"
-                app:rsb_initialMinThumbValue="0"
-                app:rsb_max="20"
-                app:rsb_maxThumbDrawable="@drawable/ic_dot"
-                app:rsb_maxThumbOffsetHorizontal="7dp"
-                app:rsb_minRange="0"
-                app:rsb_minThumbDrawable="@drawable/ic_dot"
-                app:rsb_minThumbOffsetHorizontal="-7dp"
-                app:rsb_touchRadius="25dp"
-                app:rsb_trackColor="@color/colorTransparent"
-                app:rsb_trackRoundedCaps="false"
-                app:rsb_trackSelectedColor="@color/colorPrimaryDark"
-                app:rsb_trackSelectedRoundedCaps="true"
-                app:rsb_trackSelectedThickness="3dp"
-                app:rsb_trackThickness="2dp"
-                tools:alpha="0.5" />
-
-        </FrameLayout>
-    </LinearLayout>
+    <include layout="@layout/module_advanced_search_rating"/>
 
     <View
         android:layout_width="match_parent"
@@ -110,134 +21,11 @@
         android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
-    <LinearLayout
+    <include
+        layout="@layout/module_advanced_search_time"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-
-        <LinearLayout
-            android:id="@+id/dialog_advancedSearch_video_negationLayout_dateRangeOrDuration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextButtonStyle.Primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Ansichtszeiten"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Negiert"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                android:visibility="gone"
-                tools:visibility="visible" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/dialog_advancedSearch_video_dateRange_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="04.10.2020 - 12.01.2021" />
-
-            <Button
-                android:id="@+id/dialog_advancedSearch_video_dateRange_change"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Auswählen" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="3dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/dialog_advancedSearch_video_viewed_since_edit_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/dialog_advancedSearch_video_viewed_since_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Vor"
-                        android:inputType="numberSigned"
-                        android:singleLine="true" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <Spinner
-                    android:id="@+id/dialog_advancedSearch_video_viewed_since_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:entries="@array/dateDurationOffsetUnits" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/dialog_advancedSearch_video_viewed_duration_edit_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/dialog_advancedSearch_video_viewed_duration_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Dauer"
-                        android:inputType="numberSigned"
-                        android:singleLine="true" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <Spinner
-                    android:id="@+id/dialog_advancedSearch_video_viewed_duration_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:entries="@array/dateDurationUnits" />
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -245,82 +33,13 @@
         android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <include
+        layout="@layout/module_advanced_search_length"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="16dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-
-        <LinearLayout
-            android:id="@+id/dialog_advancedSearch_video_negationLayout_length"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextButtonStyle.Primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_weight="1"
-                android:text="Länge"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Negiert"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                android:visibility="gone"
-                tools:visibility="visible" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_advancedSearch_video_length_min_edit_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_advancedSearch_video_length_min_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Minimal"
-                    android:inputType="number"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_advancedSearch_video_length_max_edit_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_advancedSearch_video_length_max_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Maximal"
-                    android:inputType="number"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        </LinearLayout>
-    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
