--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -72,7 +72,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    tools:text="Name" />
+                    android:singleLine="true"
+                    android:layout_marginEnd="5dp"
+                    tools:text="Sehr langer Serienname Test" />
             </LinearLayout>
 
             <LinearLayout
