--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -183,14 +183,25 @@
                         android:id="@+id/view"
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:layout_marginHorizontal="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="3dp"
                         android:layout_marginVertical="3dp"
                         android:background="?android:attr/listDivider" />
+
+                    <ImageView
+                        android:id="@+id/listItem_video_ratingTendency"
+                        android:layout_width="17dp"
+                        android:layout_height="17dp"
+                        android:src="@drawable/ic_arrow_up"
+                        android:visibility="gone"
+                        app:tint="@color/colorGreen"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/listItem_video_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
                         android:text="2.5" />
 
                     <TextView
