--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -424,7 +424,7 @@
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:alpha="0.075"
-                            android:src="@drawable/ic_video_collection"
+                            android:src="@drawable/ic_collection"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
