--- a/app/src/main/res/layout/popup_rating_tendency.xml
+++ b/app/src/main/res/layout/popup_rating_tendency.xml
@@ -4,45 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/tile_background">
+        android:background="@drawable/tile_background"
+        android:padding="3dp"
+        android:orientation="horizontal">
 
-        <ImageView
+        <FrameLayout
             android:id="@+id/popup_ratingTendency_down"
-            style="@style/ImageButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:foreground="@null"
-            android:scaleX="2"
-            android:scaleY="2"
-            app:srcCompat="@drawable/ic_arrow_down"
-            android:layout_marginEnd="5dp"
-            app:tint="#FF0000" />
+            android:layout_marginEnd="5dp">
 
-        <ImageView
+            <ImageView
+                style="@style/ImageButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:foreground="@null"
+                android:scaleX="2"
+                android:scaleY="2"
+                app:srcCompat="@drawable/ic_arrow_down"
+                app:tint="#FF0000" />
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/popup_ratingTendency_remove"
-            style="@style/ImageButtonStyle"
-            android:foreground="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:srcCompat="@drawable/ic_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
-            tools:visibility="visible" />
+            android:visibility="gone"
+            tools:visibility="visible">
 
-        <ImageView
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/popup_ratingTendency_remove_up"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha=".3"
+                    android:clickable="false"
+                    android:foreground="@null"
+                    app:srcCompat="@drawable/ic_arrow_up"
+                    app:tint="@color/colorGreen" />
+
+                <ImageView
+                    android:id="@+id/popup_ratingTendency_remove_down"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha=".3"
+                    android:clickable="false"
+                    android:foreground="@null"
+                    app:srcCompat="@drawable/ic_arrow_down"
+                    app:tint="#FF0000" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:foreground="@null"
+                    android:scaleX="1.2"
+                    android:scaleY="1.2"
+                    app:srcCompat="@drawable/ic_cancel" />
+            </FrameLayout>
+
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/popup_ratingTendency_up"
-            style="@style/ImageButtonStyle"
-            android:foreground="@null"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleX="2"
-            android:scaleY="2"
-            app:srcCompat="@drawable/ic_arrow_up"
-            app:tint="@color/colorGreen" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                style="@style/ImageButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:foreground="@null"
+                android:scaleX="2"
+                android:scaleY="2"
+                app:srcCompat="@drawable/ic_arrow_up"
+                app:tint="@color/colorGreen" />
+        </FrameLayout>
     </LinearLayout>
 </FrameLayout>
