--- a/app/src/main/res/layout/dialog_detail_show.xml
+++ b/app/src/main/res/layout/dialog_detail_show.xml
@@ -158,6 +158,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/dialog_detailShow_labels"
+                    style="@style/ImageButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_categories" />
+
+                <ImageView
                     android:id="@+id/dialog_detailShow_internet"
                     style="@style/ImageButtonStyle"
                     android:layout_width="wrap_content"
