--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -397,7 +397,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Shortcuts"
+                                android:text="Weitere"
                                 android:textStyle="bold" />
 
                             <LinearLayout
@@ -415,7 +415,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="Shortcuts auswählen und hinzufügen"
+                                        android:text="Weitere Optionen für die ganze App"
                                         android:textSize="12sp" />
 
                                 </LinearLayout>
@@ -424,7 +424,7 @@
                         </LinearLayout>
 
                         <Button
-                            android:id="@+id/settings_others_showShortcuts"
+                            android:id="@+id/settings_others_moreSettings"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
