--- a/app/src/main/res/layout/dialog_edit_item.xml
+++ b/app/src/main/res/layout/dialog_edit_item.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <FrameLayout
+            android:id="@+id/dialogEditCategory_selectedCategories_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
