--- a/app/src/main/res/layout/dialog_sources.xml
+++ b/app/src/main/res/layout/dialog_sources.xml
@@ -56,14 +56,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
+
                     <Button
                         android:id="@+id/dialog_sources_delete"
                         style="@style/Widget.AppCompat.Button.Borderless.Colored"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:drawableEnd="@drawable/ic_delete"
+                        android:drawableTint="@color/colorAccent"
                         android:text="Löschen"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        tools:visibility="visible" />
 
                 </LinearLayout>
                 <Button
@@ -75,7 +78,7 @@
 
                 <Button
                     android:id="@+id/dialog_sources_save"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
