--- a/app/src/main/res/layout/dialog_advanced_search_category.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_category.xml
@@ -257,6 +257,24 @@
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
+        android:id="@+id/dialog_advancedSearch_category_sort_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/module_advanced_search_sort"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="12dp"
+            android:background="?android:attr/listDivider" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
